manifest/app-server.yaml
# spring-boot-service-01.yaml
apiVersion: v1
kind: Service
metadata:
  name: project2-app-service
spec:
  selector:
    app.kubernetes.io/name: project2-app-deploy
  type: NodePort
  ports:
    - protocol: TCP
      nodePort: 31002
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project2-app-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: project2-app-deploy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: project2-app-deploy
    spec:
      containers:
        - name: project2-app-server
          image: amberlee0201/project2:latest
